[package]
name = "stdin_receiver"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A structure to help read from stdin in a separate thread, and a method to halt execution."
repository = "https://github.com/andyherbert/ansiterm"
categories = [
    "concurrency",
    "command-line-interface",
]

[dependencies]
