[package]
name = "tmode"
version = "0.1.0"
edition = "2021"
authors = ["Andy Herbert <andy.herbert@gmail.com>"]
description = "Textmode art interpretor, library, and tools."

[dependencies]
chrono = "0.4"
clap = { version = "3.0",  features = ["derive"] }
codepage437 = { version = "0.1", path = "../codepage437" }
csv = "1.1"
image = "0.23"
sauce = { version = "0.1",  path = "../sauce" }
serde_json = "1.0"
